Fix box shadow on mobile

--- a/src/styles/form/input.less
+++ b/src/styles/form/input.less
@@ -17,6 +17,7 @@ textarea {
     padding: 5px 10px;
     .transition(all 0.3s);
     .box-shadow(0 0 0 1px @input-default-color);
+    -webkit-appearance: none; // Fix box-shadow not showing up on sarari and chrome mobile app
 
     /* Hover, active */
     &:hover, &:active {
